# Hyprbalance

./: .clang-format  .gitignore  LICENSE  README.md  flake.nix  hyprload.toml  hyprpm.toml  meson.build  plugin.nix
include/: Balancer.hpp  DwindleBalancer.hpp  MasterBalancer.hpp  globals.hpp  meson.build  version.hpp.in
src/: DwindleBalancer.cpp  DwindlwBalancer.cpp  MasterBalancer.cpp  main.cpp  meson.build
